--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -40,13 +40,15 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.coffee.ui-particle": "5.0.0-preview.16"
   },
   "scopedRegistries": [
     {
       "name": "OpenUPM",
       "url": "https://package.openupm.com",
       "scopes": [
+        "com.coffee.ui-particle",
         "dev.yarnspinner"
       ]
     }
